welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
				ecritMessage()=cpt
                                ^ColumnByColumn:18: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
				ecritMessage()=cpt
                                ^